--- a/Introduction /index.html
+++ b/Introduction /index.html
@@ -56,8 +56,28 @@
 
                 <h1>Liste  des  font-size   </h1>
                 <p id="font-size">
-                        Ajuster la taille du texte  pour 12 px 
+                        font-size
                 </p>
+                <p id="font-stretch">
+                        font-stretch
+                </p>
+
+                <p id="font-size-adjust">
+                        font-size-adjust
+                </p>
+
+                <h1>Liste  des  font-style   </h1>
+                <p id="italic">
+                         italic
+                </p>
+                <p id="normal">
+                        normal
+                </p>
+                <p id="oblique">
+                        oblique
+                </p>
+
+
 
         </div>
 
