--- a/Introduction /index.html
+++ b/Introduction /index.html
@@ -16,12 +16,10 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
       <div class="main">
-         <h1>HTML page </h1>
+         <h1>Css  </h1>
          <p>This is the basic web page</p>
 
-         <div class="font-family">
-
-                  
+         <div class="font-family">   
                 <h1>Liste  des font-familly </h1>
  
                 <p id="Georgia">
@@ -55,9 +53,11 @@
                 </p>
 
                 <h1>Liste  des  font-size   </h1>
+
                 <p id="font-size">
                         font-size
                 </p>
+
                 <p id="font-stretch">
                         font-stretch
                 </p>
@@ -77,6 +77,81 @@
                         oblique
                 </p>
 
+                <h1>Text propertie    </h1>
+
+                <p id="text-color">
+                        text-color
+                </p>
+                <p id="text-align">
+                        text-aling
+                </p>
+
+                <p id="text-indent">
+                        text-indent text-indent text-indent                         text-indent text-indent text-indent 
+
+                        text-indent text-indent text-indent 
+
+                        text-indent text-indent text-indent 
+
+                </p>
+
+                <p id="letter-spacing">
+                        letter-spacingletter-spacingletter-spacingletter-spacingletter-spacingletter-spacingletter-spacing
+                        letter-spacingletter-spacingletter-spacingletter-spacingletter-spacingletter-spacingletter-spacing
+                </p>
+
+
+                <p id="word-spacing">
+                                word-spacing word-spacing word-spacing word-spacing word-spacing
+                                word-spacing word-spacing word-spacing word-spacing word-spacing 
+                </p>
+                <p id="text-decoration-overline">
+                                text-decoration-overline
+                </p>
+                <p id="ext-decoration-line-through">
+                                text-decoration-line-through
+                </p>
+                <p id="text-decoration-underline">
+                                text-decoration-underline
+                </p>
+                <p id="text-transform-uppercase">
+                                text-transform-uppercase
+                </p>
+                <p id="text-transform-lowercase">
+                                TEXT-TRANSFORM-LOWERCASE
+                </p>
+
+                <p id="text-transform-capitalize">
+                                text-transform-capitalize
+                </p>
+
+                <p id="text-direction">
+                                text-direction
+                </p>
+
+                <p id="text-shadow">  
+
+                         text-shadow
+                </p>
+
+                <p id="white-space">
+                        white-space white-space white-space white-space white-space white-space
+                        white-space white-space white-space white-space white-space white-space
+                        white-space white-space white-space white-space white-space white-space 
+                        white-space white-space white-space white-space white-space white-space       
+                </p>
+
+
+
+
+                <h1>Width and height properties </h1>
+
+                <p id="widht-height">
+                      widht-height        
+                <p/>
+
+
+                <h1>bacground propertie</h1>
 
 
         </div>
