--- a/Introduction /index.html
+++ b/Introduction /index.html
@@ -151,9 +151,17 @@
                 <p/>
 
 
-                <h1>bacground propertie</h1>
+                <h1>background propertie</h1>
 
+                <p id="background-color">
+                                background-color
+                </p>
 
+                <p id="background-image">
+                        
+                        background-image
+
+                </p>
         </div>
 
       <div>   
