--- a/Introduction /index.html
+++ b/Introduction /index.html
@@ -16,8 +16,8 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
       <div class="main">
-         <h1>Css  </h1>
-         <p>This is the basic web page</p>
+         <h1>Css  Introduction </h1>
+         <p>This is the basic css properties </p>
 
          <div class="font-family">   
                 <h1>Liste  des font-familly </h1>
@@ -151,7 +151,7 @@
                 <p/>
 
 
-                <h1>background propertie</h1>
+                <h1>background properties</h1>
 
                 <p id="background-color">
                                 background-color
@@ -162,6 +162,31 @@
                         background-image
 
                 </p>
+                    
+                <div id="background-attachment">
+                The background image is fixed - it doesn't scroll with its outer container. This example uses the CSS overflow property to force the box to scroll when there's too much text to fit in the box.
+                </div>
+
+
+
+
+                <h1> borders properties</h1>
+                <p id="border-style-solid">
+                        border-style-solid
+                </p>
+                <p id="border-style-dotted">
+                                border-style-datted
+                </p>
+                <p id="border-style-dashed">
+                                border-style-dashed
+                </p>
+                <p id="border-style-double">
+                                border-style-double
+                </p>
+                <p id="border-style-groove">
+                                border-style-groove
+                </p>
+
         </div>
 
       <div>   
